syntax="proto3";

package app.proto;

import "merchant/api/auth_types.proto";
import "merchant/api/partner_types.proto";
import "merchant/api/merchant_types.proto";
import "merchant/api/shop_types.proto";
import "merchant/api/terminal_types.proto";


option go_package = "gitlab.mapcard.pro/external-map-team/merchant-service/app/proto;proto";

service MerchantService {
    rpc AddPartner(merchant.api.AddPartnerRequest) returns (merchant.api.Partner) {}
    rpc DeletePartner(merchant.api.DeletePartnerRequest) returns (merchant.api.Partner) {}
    rpc ListPartners(merchant.api.ListPartnersRequest) returns (stream merchant.api.Partner) {}
    rpc AddMerchant(merchant.api.AddMerchantRequest) returns (merchant.api.Merchant) {}
    rpc DeleteMerchant(merchant.api.DeleteMerchantRequest) returns (merchant.api.Merchant) {}
    rpc ListMerchants(merchant.api.ListMerchantsRequest) returns (stream merchant.api.Merchant) {}
    rpc AddShop(merchant.api.AddShopRequest) returns (merchant.api.Shop) {}
    rpc DeleteShop(merchant.api.DeleteShopRequest) returns (merchant.api.Shop) {}
    rpc ListShops(merchant.api.ListShopsRequest) returns (stream merchant.api.Shop) {}
    rpc AddTerminal(merchant.api.AddTerminalRequest) returns (merchant.api.Terminal) {}
    rpc DeleteTerminal(merchant.api.DeleteTerminalRequest) returns (merchant.api.Terminal) {}
    rpc ListTerminals(merchant.api.ListTerminalsRequest) returns (stream merchant.api.Terminal) {}
    rpc Auth(merchant.api.AuthRequest) returns (merchant.api.SellerInfo) {}
}




